# NanoCode-v2

./: .env.example  .gitignore  .pico.toml.example  README.md  install.sh  pyproject.toml
docs/: configuration.md  memory.md  sandbox.md  skills.md
pico/: __init__.py  cli.py  testing.py
pico/commands/: __init__.py  slash.py
pico/config/: __init__.py
pico/core/: __init__.py  artifacts.py  compact.py  context_manager.py  context_usage.py  engine.py  engine_helpers.py  model_errors.py  model_output.py  permissions.py  plan_mode.py  run_store.py  runtime.py  runtime_checkpoints.py  runtime_consumers.py  runtime_events.py  runtime_secrets.py  session_events.py  session_lifecycle.py  session_store.py  (+12 more)
scripts/: collect_resume_metrics.py  run_business_scenario_dogfood.py  run_large_scale_experiments.py  run_provider_experiments.py  run_real_session_acceptance.py  run_v3_human_scenario_gate.py
tests/: test_agent_workers_acceptance.py  test_architecture_boundaries.py  test_ask_user.py  test_business_scenario_dogfood.py  test_context_governance_acceptance.py  test_context_manager.py  test_engine_acceptance.py  test_evaluator.py  test_memory.py  test_metrics.py  test_permissions_acceptance.py  test_pico.py  test_real_session_acceptance.py  test_release_smoke.py  test_run_evidence.py  test_run_store.py  test_runtime_evidence_acceptance.py  test_safety_invariants.py  test_sandbox_config.py  test_sandbox_runner.py  test_skills_acceptance.py  test_task_state.py  test_todo_ledger_acceptance.py  test_tool_policy_acceptance.py  test_tui.py  test_usage.py  test_v3_runtime.py
(+50 files in other folders)
