[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pico"
version = "0.3.0"
description = "Small local coding agent for OpenAI-compatible, Anthropic-compatible, and DeepSeek models"
requires-python = ">=3.10"
dependencies = [
  "textual>=0.86.0",
  "tomli>=2.0.0; python_version < '3.11'",
]

[project.scripts]
pico = "pico.cli:main"
pico-tui = "pico.tui.main:main"

[dependency-groups]
dev = [
  "pytest>=8.3.5",
  "ruff>=0.4.4",
]

[tool.setuptools.packages.find]
include = ["pico*"]

[tool.pytest.ini_options]
norecursedirs = [
  ".git",
  ".venv",
  "artifacts",
  "build",
  "dist",
]
